@@ -15,4 +15,3 @@ install-sh
 ltmain.sh
 missing
 *~
-version.m4
