@@ -1,3 +1,0 @@
-VERSION_MAJOR=1
-VERSION_MINOR=1
-VERSION_PATCH=1
